--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <center>
-        <h3>Basket-Ball Score-board</h3>
+        <h3>Basket-Ball <br /> Score-board</h3>
     </center>
     <div class="container">
         <section>
@@ -25,6 +25,8 @@
                 <button id="reset" onclick="homeReset()">RESET</button>
             </div>
         </section>
+        <br />
+        <br />
         <section>
             <h1>GUEST</h1>
             <h2 id="count2-el">0</h2>
